<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <TextView
        style="@style/ListViewHeaderTextStyle"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/ids_lbl_system" />

    <RelativeLayout
        android:id="@+id/sd_card"
        style="@style/ListViewStyle"
        android:background="@drawable/selector_list_full_border_background"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"
        android:onClick="onClick"
        android:paddingBottom="@dimen/list_multilinetext_bottompadding"
        android:paddingTop="@dimen/list_multilinetext_toppadding">

        <Switch
            android:id="@+id/switch_sd_card"
            style="@style/ListViewIconStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/switch_sd_card"
            android:layout_toStartOf="@id/switch_sd_card"
            android:orientation="vertical">

            <TextView
                style="@style/ListViewSingleTextStyle"
                android:text="@string/ids_lbl_external_storage" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        style="@style/ListViewHeaderTextStyle"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/ids_lbl_charts" />

    <RelativeLayout
        android:id="@+id/chart_fill"
        style="@style/ListViewStyle"
        android:background="@drawable/selector_list_top_border_background"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"
        android:onClick="onClick"
        android:paddingBottom="@dimen/list_multilinetext_bottompadding"
        android:paddingTop="@dimen/list_multilinetext_toppadding">

        <Switch
            android:id="@+id/switch_fill_chart"
            style="@style/ListViewIconStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/switch_fill_chart"
            android:layout_toStartOf="@id/switch_fill_chart"
            android:orientation="vertical">

            <TextView
                style="@style/ListViewSingleTextStyle"
                android:text="@string/ids_lbl_show_fill_chart" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/chart_check_storage"
        style="@style/ListViewStyle"
        android:background="@drawable/selector_list_top_border_background"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"
        android:onClick="onClick"
        android:paddingBottom="@dimen/list_multilinetext_bottompadding"
        android:paddingTop="@dimen/list_multilinetext_toppadding">

        <Switch
            android:id="@+id/switch_check_storage_chart"
            style="@style/ListViewIconStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/switch_check_storage_chart"
            android:layout_toStartOf="@id/switch_check_storage_chart"
            android:orientation="vertical">

            <TextView
                style="@style/ListViewSingleTextStyle"
                android:text="@string/ids_lbl_show_check_storage_chart" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/chart_max_range"
        style="@style/ListViewStyle"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_list_full_border_background"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"
        android:onClick="onClick"
        android:paddingBottom="@dimen/list_multilinetext_toppadding"
        android:paddingTop="@dimen/list_multilinetext_bottompadding">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                style="@style/ListViewDualTextTopStyle"
                android:text="@string/ids_lbl_set_visible_range" />

            <TextView
                android:id="@+id/tv_visible_range"
                style="@style/ListViewDualTextBottomStyle" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>