<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ids_legend_free"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:textColor="@color/light_text_disable" />

            <View
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimaryLight" />

            <TextView
                android:id="@+id/free_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:textColor="@color/light_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ids_legend_fill"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:textColor="@color/light_text_disable" />

            <View
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/fill_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:textColor="@color/light_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ids_lbl_system"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:textColor="@color/light_text_disable" />

            <View
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_marginTop="4dp"
                android:background="@color/light_text_disable" />

            <TextView
                android:id="@+id/system"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:textColor="@color/light_text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/button_alpha"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/refresh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_weight="1"
            android:contentDescription="@string/default_content_description"
            android:drawableTop="@drawable/ic_refresh"
            android:gravity="center"
            android:text="@string/ids_lbl_refresh"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:textColor="@color/light_text_disable" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/dark_text" />

        <TextView
            android:id="@+id/sdCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/default_content_description"
            android:drawableTop="@drawable/ic_sd_storage"
            android:gravity="center"
            android:paddingBottom="@dimen/margin"
            android:paddingTop="@dimen/margin"
            android:text="@string/ids_lbl_external_storage"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:textColor="@color/light_text_disable" />
    </LinearLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_above="@id/buttons"
        android:layout_below="@id/info"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>